app/globals.css
@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');

@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Teko-SemiBold';
  src: url('https://cdn.ucsd.edu/cms/decorator-5/fonts/Teko-SemiBold.woff2') format('woff2');
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

:root {
  --ucsd-navy: #182b49;
  --ucsd-blue: #00629b;
  --ucsd-gold: #c69214;
  --ucsd-yellow: #ffcd00;
  --ucsd-sand: #ffffff;
  --ucsd-text: #333333;
}

body {
  background: var(--ucsd-sand);
  color: var(--ucsd-text);
  font-family: Roboto, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
}

h1,
h2 {
  font-family: 'Teko-SemiBold', Teko, sans-serif;
  font-weight: 600;
  letter-spacing: 0.5px;
  line-height: 1.1;
}

h1 {
  color: var(--ucsd-blue);
  font-size: 3.5em;
}

h2,
.h2 {
  color: var(--ucsd-navy);
  font-size: 2.2em;
}

@media (min-width: 768px) {
  h2,
  .h2 {
    font-size: 2.5em;
  }
}

h3,
h4,
h5,
h6 {
  color: var(--ucsd-text);
  font-weight: 400;
  line-height: 1.5;
}

h3 {
  font-size: 23px;
}

h4 {
  font-size: 18px;
}

h5 {
  font-size: 14px;
}

h6 {
  font-size: 12px;
}

.ucsd-layout-header {
  display: block;
  width: 100%;
  background-color: #2b92b9;
  border-bottom: 1px solid rgba(24, 43, 73, 0.2);
}

.ucsd-layout-container {
  width: 98%;
  max-width: 1200px;
  margin: 0 auto;
}

.ucsd-layout-title {
  box-sizing: border-box;
  width: 100%;
  height: 92px;
  background: #fff;
  padding: 1.5em 0;
}

.ucsd-layout-title-row {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  height: 100%;
  position: relative;
}

.ucsd-title-header {
  color: #000;
  font-size: 1.35rem;
  letter-spacing: 1px;
  text-decoration: none;
  text-transform: uppercase;
  margin-top: 5px;
  line-height: 1.2;
}

.ucsd-title-header:focus,
.ucsd-title-header:hover {
  color: #666;
  text-decoration: none;
}

.ucsd-title-logo {
  flex: 0 0 auto;
  width: 229px;
  height: 65px;
  overflow: hidden;
  text-indent: -999em;
  white-space: nowrap;
  background: url('/images/ucsd-sprite-base.png') no-repeat transparent;
  background-position: 0 -3px;
}

.ucsd-layout-navbar {
  min-height: 50px;
  width: 100%;
  background-color: #00629b;
  border: 0;
  border-bottom: 1px solid #00629b;
  margin-bottom: 0;
}

.ucsd-navbar-list {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
}

.ucsd-navbar-link {
  display: block;
  color: #fff;
  background-color: #00629b;
  padding: 15px;
  text-decoration: none;
  line-height: 20px;
  font-size: 16px;
}

.ucsd-navbar-link:focus,
.ucsd-navbar-link:hover {
  background-color: #004268;
  color: #fff;
}

@media screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi) {
  .ucsd-title-logo {
    background-image: url('/images/ucsd-sprite-base2x.png');
    background-size: 500px 120px;
  }
}

@media only screen and (max-width: 1200px) {
  .ucsd-layout-container {
    max-width: 960px;
  }
}

@media only screen and (max-width: 768px) {
  .ucsd-layout-container {
    width: 94%;
  }

  .ucsd-layout-title {
    padding: 1em 0;
    height: auto;
  }

  .ucsd-layout-title-row {
    min-height: 65px;
    align-items: center;
  }

  .ucsd-title-header {
    margin-top: 0;
    max-width: calc(100% - 245px);
  }

  .ucsd-title-logo {
    display: block;
    position: absolute;
    right: 0;
    top: 0;
  }
}

@media only screen and (max-width: 360px) {
  .ucsd-layout-title {
    padding: 0.5em 0;
  }

  .ucsd-title-header {
    font-size: 20px;
    margin-top: 0;
  }
}

.ucsd-site-footer {
  width: 100%;
  background-color: #00629b;
}

.ucsd-site-footer-row {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  padding: 1.5em 0;
  color: #fff;
  font-size: 0.9em;
  line-height: 1.5;
}

.ucsd-site-footer-left p {
  margin: 0;
}

.ucsd-site-footer-links {
  list-style: none;
  margin: 0.5em 0 0;
  padding: 0;
}

.ucsd-site-footer-links > li {
  display: inline;
  border-right: 1px solid #fff;
  margin-left: 0;
  margin-right: 0.5em;
  padding-right: 0.75em;
}

.ucsd-site-footer-links > li:last-child {
  border-right: none;
}

.ucsd-site-footer-links > li > a {
  color: #fff;
  text-decoration: underline;
}

.ucsd-site-footer-right {
  flex: 0 0 auto;
  align-self: center;
}

.ucsd-site-footer-logo {
  width: 158px;
  height: 30px;
  float: right;
}

@media only screen and (max-width: 768px) {
  .ucsd-site-footer-row {
    flex-direction: column;
  }

  .ucsd-site-footer-logo {
    float: none;
    margin-top: 15px;
  }
}

